# my_first_transformer

./: .gitignore  CMakeLists.txt  README.md
include/: transformer.hpp  xtensor_accelerate.hpp
include/core/: README.md  encoder_decoder.hpp  input_embedding.hpp
include/layers/: attention.hpp  feedforward.hpp  layer_norm.hpp  sublayer.hpp
include/models/: decoder.hpp  embeddings.hpp  encoder.hpp  encoder_decoder.hpp  generator.hpp
include/solvers/: accelerate.hpp
include/types/: README.md
include/utils/: README.md  activations.hpp  logger.hpp  metrics.hpp  progress_bar.hpp  weight_init.hpp
libs/: README.md
src/: README.md  main.cpp
src/core/: input_embedding.cpp
tests/: accelerate.cpp  check_bnns.cpp  check_bnns_detailed.cpp  encoder_decoder.cpp  logger.cpp  progress_bar.cpp  transformer_example.cpp  xtensor.cpp
